--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 body { 
     background-color: #0f172a; /* Slate-900 */
     color: #f1f5f9; 
-    visibility: hidden; 
+    /* visibility: hidden;  */
 }
 
     .nav-link-active {
